social section finished

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</a>
 			</nav>
 		</header>
-		<div class="contenido">
+		<div>
 			<div id="home" class="home">
 				<div class="bio">
 					<p id="occupation">Software engineering student</p>
@@ -52,15 +52,15 @@
 			</div>
             <div id="projects" class="projects">
                 <div class="title">
-                    <h1>Projects</h1>
+                    <p>Projects</p>
                 </div>
                 <div id="projects-container" class="grid-container"></div>
             </div>
             <div id="socials" class="socials">
                 <div class="title">
-                    <h1>Socials</h1>
+                    <p>Socials</p>
                 </div>
-                <div id="socials-container" class="grid-container"></div>
+                <div id="socials-container" class="grid-container socials-container"></div>
             </div>
 		</div>
 		<script src="script.js"></script>
