links in json files

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<nav>
 				<a href="#projects">Projects</a>
 				<a href="#socials">Social</a>
-				<a href="#" id="github">
+				<a href="https://github.com/DevGabriel23/portfolio" target="_blank" id="github">
 					<i class="fa-brands fa-github"></i>
 					<p>Github</p>
 				</a>
@@ -27,9 +27,9 @@
 		<div>
 			<div id="home" class="home">
 				<div class="bio">
-					<p id="occupation">Software engineering student</p>
+					<p id="occupation">Software engineer</p>
 					<p>
-						I’m a back-end developer although I know a little about
+						I’m a <b>back-end</b> developer although I know a little about
 						web design and development, I have used tools like Figma
 						and ReactJS, I am interested in being a full-stack
 						developer
@@ -49,7 +49,11 @@
 						<button>Send</button>
 					</form>
 				</div>
+				<button class="down-button" onclick="scrollToProjects()">
+					<i class="fa-solid fa-angles-down"></i>
+				</button>
 			</div>
+			
             <div id="projects" class="projects">
                 <div class="title">
                     <p>Projects</p>
