--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 					</p>
 				</div>
 				<div class="contact-me">
-					<form class="form">
+					<form class="form" method="post" action="./contact_me.php">
 						<h1>Contact me</h1>
 						<div class="inputs">
 							<div class="name-lastname">
-								<input type="text" placeholder="Name" id="name" />
-								<input type="text" placeholder="Lastname" id="lastname" />
+								<input type="text" placeholder="Name" id="name" name="name" required/>
+								<input type="text" placeholder="Lastname" id="lastname" name="lastname" required/>
 							</div>
-							<input type="email" placeholder="Email" id="email" />
-							<textarea placeholder="Message" id="message"></textarea>
+							<input type="email" placeholder="Email" id="email" name="email" required/>
+							<textarea placeholder="Message" id="message" name="message" required></textarea>
 						</div>
-						<button>Send</button>
+						<button type="submit">Send</button>
 					</form>
 				</div>
 				<button class="down-button" onclick="scrollToProjects()">
