link correctly email token

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					</p>
 				</div>
 				<div class="contact-me">
-					<form class="form" action="https://formsubmit.co/gabrielramondev23@gmail.com" method="POST">
+					<form class="form" action="https://formsubmit.co/31ca66911778c232cdce1b4599f0e7c6" method="POST">
 						<h1>Contact me</h1>
 						<div class="inputs">
 							<div class="name-lastname">
