--- a/index.html
+++ b/index.html
@@ -70,4 +70,7 @@
 		<script src="script.js"></script>
         <script src="https://kit.fontawesome.com/a8c2d1d8c8.js" crossorigin="anonymous"></script>
 	</body>
+	<footer>
+		<p>&copy; 2023 Gabriel Ramón Cupil. Todos los derechos reservados.</p>
+	</footer>	 
 </html>
